# TEMPL-parallel

./: CMakeLists.txt  README.md
app/: main.cpp
src/: args.cpp  args.h  error.cpp  error.h  gcc_version.h  macros.h  parallel.cpp  parallel.h  strings.cpp  strings.h
